<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">杀人游戏之月圆之夜</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="not_wifi_tips">该游戏存在语音通话\n请在WIFI网络环境下进行游戏</string>
    <string name="empty_nick_name">昵称不能为空</string>
    <string name="test_tips">无账号内测</string>
    <string name="no_net_tips">网络连接异常</string>
    <string name="room_message">房间信息</string>
    <string name="exit_tips">再次点击退出</string>
    <string name="testing_peer">正在检测网络环境是否能进行语音通讯，大概需要5秒，请稍候</string>
    <string name="test_success">当前网络可以进行语音通话</string>
    <string name="test_failed">当前网络不能连通其他玩家进行语音通讯</string>
    <string name="newbie_no_audio_title">新手-无语音游戏</string>
    <string name="newbie_audio_title">新手-语音文字游戏</string>
    <string name="refuse_audio">您拒绝赋予录音权限\n可在系统设置-应用程序中开启</string>
    <string name="add_game">创建游戏</string>
    <string name="unknow">不明</string>
    <string name="god">神</string>
    <string name="seer">预言家</string>
    <string name="cupid">丘比特</string>
    <string name="idiot">白痴</string>
    <string name="hunter">猎人</string>
    <string name="witch">女巫</string>
    <string name="guard">守卫</string>
    <string name="thief">盗贼</string>
    <string name="wolf">狼人</string>
    <string name="how_many_wolf">%1$s狼</string>
    <string name="villager">平民</string>
    <string name="game_mode_one">屠边局</string>
    <string name="game_mode_two">屠城局</string>
    <string name="days_first">前夕</string>
    <string name="days_count">第%1$s天</string>
    <string name="nights_count">第%1$s夜</string>
    <string name="current">人数:%1$s/%2$s</string>
    <string name="game_title">房间名称</string>
    <string name="empty_game_title">房间名称不能为空</string>
    <string name="room_gaming">该房游戏进行中，观战模式敬请期待</string>
    <string name="into_room_tips">确定进入该房吗</string>
    <string name="into_room_error">房间人已满或已解散</string>
    <string name="room_password_error">房间密码错误</string>
    <string name="game_title_hint">房名最多六字</string>
    <string name="using_room_password">房间密码：</string>
    <string name="password_too_short">房间密码为3至6位</string>
    <string name="room_change_msg">房间信息以及更改，请确认后准备游戏</string>
    <string name="save_self_last_word">本局%1$s、%2$s</string>
    <string name="no_witch">没有女巫</string>
    <string name="witch_no_save_self">女巫不能自救</string>
    <string name="no_last_word">没有遗言</string>
    <string name="display_save_self_days">女巫前%1$s夜能自救</string>
    <string name="display_last_word_days">前%1$s天有遗言</string>
    <string name="days_one">游戏前</string>
    <string name="save_self_days">夜女巫能自救</string>
    <string name="last_word_days">天有遗言</string>
    <string name="eight_men">8人</string>
    <string name="twelve_men">12人</string>
    <string name="create">创建</string>
    <string name="into_room">进入</string>
    <string name="change_room">修改</string>
    <string name="cancel">取消</string>
    <string name="login">登录</string>
    <string name="send">发送</string>
    <string name="vote">投票</string>
    <string name="confirm">确定</string>
    <string name="abstained">放弃</string>
    <string name="nick_name">请输入一个昵称</string>
    <string name="audio">语音通话</string>
    <string name="login_error">登录失败</string>
    <string name="login_success">登录成功</string>
    <string name="reconnect_error">已经连接服务器，不要重复连接</string>
    <string name="connect_failed">连接服务器失败</string>
    <string name="reconnect">服务器尚未连接，正在连接服务器</string>
    <string name="connect_success">服务器连接成功</string>
    <string name="wait_for_dev">高级大厅敬请期待</string>
    <string name="ready_room_talk">文明发言</string>
    <string name="empty_talk">发言不能为空</string>
    <string name="vote_part_one">选</string>
    <string name="kill_part_one">刀</string>
    <string name="shoot_part_one">射</string>
    <string name="see_part_one">验</string>
    <string name="save_part_one">救</string>
    <string name="poison_part_one">毒</string>
    <string name="guard_part_one">守</string>
    <string name="vote_part_two">号</string>
    <string name="button_abandon_election">退水</string>
    <string name="button_end_speak">结束</string>
    <string name="end_game_tips">确定退出吗（死后退出不影响游戏）</string>
    <string name="speak_stop">%1$s发言完毕</string>
    <string name="vote_tips">您选择的是%1$s</string>
    <string name="abstained_tips">您确定放弃吗</string>
    <string name="not_talk_time">现在不可以发言，您可以发送表情暗示他人</string>
    <string name="gaming_talk">%1$s(%2$s号)：%3$s</string>
    <string name="start_game_error">人员不够或没有准备</string>
    <string name="start_game">游戏开始，请确认自己身份</string>
    <string name="please_select">请选择一个玩家</string>
    <string name="role_get">您的身份为：%1$s</string>
    <string name="game_num_error">请选择正确的游戏身份人数</string>
    <string name="night_start">太阳下山了，天黑请闭眼</string>
    <string name="select_time">您有%1$s秒时间选择</string>
    <string name="count_time">剩余%1$s秒</string>
    <string name="vote_time_out">选择时间已过</string>
    <string name="night_thief_one">盗贼请睁眼，请选择一个身份</string>
    <string name="night_thief_two">请选择以下两个身份：%1$s、%2$s</string>
    <string name="night_thief_same">两个身份相同，无需选择</string>
    <string name="night_thief_wolf">有狼必选狼</string>
    <string name="night_thief_end">盗贼请闭眼</string>
    <string name="night_guard_one">守卫请睁眼，请选择一个您要守护的人</string>
    <string name="night_guard_two">您要守护的是：%1$s号</string>
    <string name="night_guard_same">不能连续两晚守同一个人</string>
    <string name="night_guard_abandon">您今夜放弃守护任何人</string>
    <string name="night_guard_end">守卫请闭眼</string>
    <string name="night_seer_one">预言家请睁眼，请选择一个你要查看身份的人</string>
    <string name="night_seer_two">您验的人是 %1$s</string>
    <string name="night_seer_abandon">您今夜放弃查看任何人身份</string>
    <string name="night_seer_end">预言家请闭眼</string>
    <string name="night_wolf_one">狼人请睁眼，请选择一个猎杀目标</string>
    <string name="night_wolf_ready">狼人可以通过文字与队友交流\n20秒后方可选择目标</string>
    <string name="night_wolf_two">狼队今晚刀的是：%1$s号</string>
    <string name="night_wolf_abandon">狼队今晚空刀</string>
    <string name="kill_self">确定自爆吗</string>
    <string name="night_wolf_end">狼人请闭眼</string>
    <string name="night_witch_one">女巫请睁眼，今晚死的是他</string>
    <string name="night_witch_one_s">女巫请睁眼，今晚死的是%1$s号</string>
    <string name="night_witch_one_p">女巫请睁眼，今夜无人死亡</string>
    <string name="night_witch_two">是否使用解药</string>
    <string name="night_witch_no_medicine">您已使用过解药</string>
    <string name="night_witch_three">是否使用毒药</string>
    <string name="night_witch_cannot">今夜您不能自救</string>
    <string name="night_witch_no_poison">您已使用过毒药</string>
    <string name="night_witch_m">救%1$s号</string>
    <string name="night_witch_p">毒%1$s号</string>
    <string name="night_witch_reply">您今夜%1$s，%2$s</string>
    <string name="night_witch_m_abandon">没救人</string>
    <string name="night_witch_p_abandon">没毒人</string>
    <string name="night_witch_end">女巫请闭眼</string>
    <string name="day_start">天亮请睁眼</string>
    <string name="day_start_chief_one">现在开始竞选警长，请选择是否竞选</string>
    <string name="day_start_chief_two">竞选警长的人为：%1$s</string>
    <string name="vote_election">所有发言结束，请投票给自己心目中的警长</string>
    <string name="only_one_election">只有一名玩家竞选警长</string>
    <string name="all_player_election">所有玩家都竞选警长，本局游戏没有警长</string>
    <string name="chief_con">%1$s当选警长</string>
    <string name="no_chief">警徽被撕掉</string>
    <string name="election_chief">确定竞选警长吗</string>
    <string name="abandon_election">确定退水吗</string>
    <string name="who_abandon_election">%1$s号玩家退水</string>
    <string name="who_speak">%1$s号玩家开始发言</string>
    <string name="your_turn">轮到你发言啦！！！</string>
    <string name="end_speak">确定结束发言吗</string>
    <string name="abstained_chief">确定放弃竞选警长吗</string>
    <string name="chief_not_vote">警上人员没有投票权</string>
    <string name="day_start_chief_non">无人竞选，本局游戏没有警长</string>
    <string name="no_one_vote">没人任何人投票</string>
    <string name="same_vote_again">再次平票</string>
    <string name="no_vote_no_chief">本局游戏没人警长</string>
    <string name="piece_night">昨夜平安夜</string>
    <string name="single_die">昨夜%1$s号玩家死亡</string>
    <string name="double_die">昨夜%1$s号%2$s号玩家双死</string>
    <string name="vote_situation">投%1$s号的有：%2$s</string>
    <string name="vote_no_die">今天无人被放逐</string>
    <string name="vote_die">%1$s号玩家被放逐</string>
    <string name="idiot_skill">%1$s号玩家身份为白痴，免疫放逐</string>
    <string name="hunter_skill_one">%1$s号玩家身份为猎人，请选择一个目标</string>
    <string name="hunter_skill_two">%1$s号玩家发动技能，带走%2$s号玩家</string>
    <string name="hunter_skill_abandon">%1$s号玩家放弃发动技能</string>
    <string name="who_last_word">请%1$s号玩家发表遗言</string>
    <string name="please_transfer_chief">请警长移交或者撕掉警徽</string>
    <string name="no_vote_no_death">今天没有人被放逐</string>
    <string name="vote_to_die">所有发言结束，现在开始投票选出放逐者</string>
    <string name="wolf_kill_self">%1$s号玩家自爆</string>
    <string name="number">%1$s号</string>
    <string name="game_over">游戏结束，%1$s胜利</string>

</resources>
