<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="100dp"
            android:text="@string/nick_name" />

        <EditText
            android:id="@+id/nickName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:maxLength="6"
            android:ems="10">

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/loginUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/test_tips"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/isLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:background="@drawable/loading_pop_background"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/loginStyle"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true" />

    </RelativeLayout>
</RelativeLayout>